--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,17 @@ body, html {
   padding: 0;
 }
 
+a {
+  color: #3f51b5;
+  text-decoration: none;
+}
+
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding-top: 70px;
+}
+
 .navbar {
   width: 100%;
   height: 56px;
@@ -27,7 +38,6 @@ body, html {
     font-size: 14px;
     a, & {
       color: #fff;
-      text-decoration: none;
     }
     a:hover {
       color: #ccc;
