Build framework for creating reusable components

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -2,7 +2,9 @@
 @import "bulma/sass/utilities/mixins";
 @import "bulma/sass/grid/all";
 
-@import 'layout';
+@import "layout";
+
+@import "dropdown";
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
  *
